--- a/assignment1.html
+++ b/assignment1.html
@@ -2,8 +2,10 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-Meta Tags->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title>Bootstrap Assignment</title>
   </head>
   <body>
@@ -36,6 +38,7 @@
     </div>
   </div>
 </nav>
+    
     <h1>Hello, world!</h1>
   </body>
   <button type="button" class="btn btn-primary btn-lg">Button Example One</button>
